[package]
name = "p2p-in-rust-0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "mdns"]  }
tokio = { version = "1.28", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
log = "0.4"
pretty_env_logger = "0.5"
