[package]
name = "rust-p2p-badware"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12" , features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.52.1", features = ["async-std", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux"]  }
libp2p-quic = { version = "0.8.0-alpha",  features = ["async-std"] }
